Add a custom css difinition

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -10,4 +10,4 @@
   <%= link_to "Sign up now!", '#', class: "btn btn-lg btn-primary" %>
 </div>
 
-<%= link_to image_tag("development_ruby_on_rails_64px_540426_easyicon.net.png", alt: "Rails"), 'https://www.easyicon.net/download/png/540426/64/' %>
+<%= link_to image_tag("rails.png", alt: "Rails"), 'http://rubyonrails.org/' %>
